fix: remove unnecessary spacing

--- a/client/src/app/components/stardust/AssociationSection.scss
+++ b/client/src/app/components/stardust/AssociationSection.scss
@@ -104,7 +104,6 @@
                     }
 
                     .value {
-                        margin: 8px 0 0 0;
                         @include font-size(14px, 21px);
                         font-weight: 700;
                     }
